--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-spinner": "^8.0.3",
     "ngx-stripe": "^9.0.1",
-    "ngx-useful-swiper": "^9.0.3",
+    "ngx-swiper-wrapper": "^9.0.1",
     "rxjs": "~6.4.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.1.2",
