--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.31",
+    "ng-lazyload-image": "^9.0.1",
     "ng6-toastr-notifications": "^1.0.4",
     "ngx-bootstrap": "^5.5.0",
     "ngx-device-detector": "^2.0.0",
