--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "geolib": "^3.0.4",
     "html2canvas": "^1.0.0-rc.7",
     "lodash": "^4.17.15",
+    "lottie-web": "^5.7.4",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.31",
     "ng-lazyload-image": "^9.0.1",
@@ -47,6 +48,7 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-device-detector": "^2.0.0",
     "ngx-google-places-autocomplete": "^2.0.4",
+    "ngx-lottie": "^6.4.0",
     "ngx-spinner": "^8.0.3",
     "ngx-stripe": "^9.0.1",
     "rxjs": "~6.4.0",
